fix: Dropdown text alignment

--- a/src/StreamMaster.WebUI/public/themes/streammaster-light/theme.css
+++ b/src/StreamMaster.WebUI/public/themes/streammaster-light/theme.css
@@ -8866,7 +8866,6 @@ div[aria-haspopup=dialog] {
 }
 
 .sm-button {
-  height: 1.4rem;
   padding: 0;
   transition: filter 0.3s ease;
 }
