--- a/src/StreamMaster.WebUI/themes/streammaster/streammaster-base/components/_sm-button.scss
+++ b/src/StreamMaster.WebUI/themes/streammaster/streammaster-base/components/_sm-button.scss
@@ -1,5 +1,4 @@
 .sm-button {
-    height: $input-height-with-no-borders;
     padding: 0;
     transition: filter 0.3s ease;
 
